# opengl-experiments

./: CMakeLists.txt
cmake/: useGLEW.cmake  useGLUT.cmake  useOpenGL.cmake  useX11.cmake  use_GLEW.cmake  use_GLUT.cmake  use_OpenGL.cmake  use_X11.cmake  use_kb_OpenGL.cmake
include/net/kaspervandenberg/kb_opengl/: opengl_init.hxx  shader.hxx  window.hxx
include/net/kaspervandenberg/kb_opengl/exceptions/: initialisation_exception.hxx  opengl_base_exception.hxx
kb_opengl/: CMakeLists.txt
kb_opengl/net/kaspervandenberg/kb_opengl/: opengl_init.cxx  shader.cxx
kb_opengl/net/kaspervandenberg/kb_opengl/exceptions/: initialisation_exception.cxx
try1/: CMakeLists.txt  try1.cxx
try2/: CMakeLists.txt  try2.cxx
try3/: CMakeLists.txt  try3.cxx
